mds: don't modify inode that is not projected

In the slave rename prep case (rename inode to different auth mds), the
rename inode is not projected. CDir::check_rstat() gets confused if
MDCache::_project_rstat_inode_to_frag() updates inode's accounted rstat
in that case.

Fixes: http://tracker.ceph.com/issues/16768
Signed-off-by: "Yan, Zheng" <zyan@redhat.com>